...
    return  Container(
      width: double.infinity,
      child: Column(
          crossAxisAlignment:  CrossAxisAlignment.center,
          children:[
            Text(title, style: const TextStyle(fontWeight: FontWeight.bold, fontSize: 20)),
            const Text("To access this service you must be subscribed"),
            OutlinedButton(
              style: OutlinedButton.styleFrom(
                primary: Colors.red,
              ),
              onPressed: (){
                subscribe = true;
                print(subscribe);
              },
                child: const Text("Subscribe", style: TextStyle(fontWeight: FontWeight.w600, color: Colors.red),))
          ]
      ),
    );
  }


...
