...
      onTap: () {},
      child: child,
    ),
  );

  Widget postButtonChild = const Text(
    'Book',
    style: TextStyle(color: Colors.black, fontWeight: FontWeight.bold),
  );

  String uri = "https://web-production-a9a8.up.railway.app/";

  Future<void> book() async{
...
